--- a/ADO_NET_first_lab/ADO_NET_first_lab.csproj
+++ b/ADO_NET_first_lab/ADO_NET_first_lab.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MaterialDesignColors" Version="3.0.0" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="1.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
   <ItemGroup>
